Fix panel overflow issue
Reduced the font size as the display numbers
overflow from the display panel

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .number-panel{
-    font-size: 50px;
+ 
 
 }
 .button-container {
